gchq/stroom#4124 show messages icon reflects max message severity
# Conflicts:
#	stroom-core-client/src/main/java/stroom/dashboard/client/main/SearchModel.java
#	stroom-core-client/src/main/java/stroom/query/client/presenter/QueryModel.java